# lang-agent

./: .clinerules  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.frontend  GRAFANA_QUERIES.md  LOGGER_FACTORY.md  LOKI_SETUP.md  Makefile  README.md  docker-compose.yml  nginx.default.conf.template  pyproject.toml  requirements-dev.txt  requirements.txt  test_logging.py
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/backend/: CONTRIBUTING.md  README.md  alembic.ini
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0001_initial_schema.py  0002_flashcards.py  0003_add_active_deck.py
apps/backend/src/backend/: __init__.py  config.py  logger_factory.py  logging.py
apps/backend/src/backend/api/: __init__.py  app.py  dependencies.py  schemas.py
apps/backend/src/backend/application/: __init__.py  runtime.py
apps/backend/src/backend/cli/: __init__.py  __main__.py  main.py
apps/backend/src/backend/resources/: __init__.py  prompts.py
apps/backend/src/backend/services/: conversation.py  flashcards.py  llm.py  telegram_auth.py  telegram_bot.py
apps/backend/tests/: test_api_http.py  test_app.py  test_conversation.py  test_flashcards.py  test_llm.py  test_storage.py  test_telegram_auth.py
apps/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts
apps/frontend/public/: runtime-config.js
apps/frontend/src/: main.tsx
apps/frontend/src/api/: client.ts  types.ts
apps/frontend/src/components/: LessonSummaryCard.module.css  LessonSummaryCard.tsx  ShellLayout.module.css  ShellLayout.tsx
apps/frontend/src/components/decks/: DecksPanel.module.css  DecksPanel.tsx
apps/frontend/src/hooks/: useDeckManager.ts  useMockLessons.ts  useTrainingSession.ts
apps/frontend/src/routes/: AppRoot.module.css  AppRoot.tsx
apps/frontend/src/styles/: global.css
apps/frontend/src/utils/: telegram.ts
docker/frontend/: entrypoint.sh
docs/: MIGRATION_SECURITY.md  README.md  SECURITY.md  telegram-miniapp-testing.md
docs/adr/: 0001-telegram-runtime.md  0002-telegram-webapp-user-context.md
docs/architecture/: agents.md  logging-overview.md
docs/guides/: grafana-queries.md  loki-setup.md  quick-start-loki.md  telegram-webhook-setup.md
src/bot/: __init__.py  app.py
src/bot/services/: __init__.py
tests/: test_app.py
(+13 files in other folders)
