[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greek-language-bot"
version = "0.1.0"
description = "AI-assisted Greek language learning bot."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Your Team", email = "team@example.com"}
]
dependencies = [
  "aiogram>=3.12,<4.0",
  "aiosqlite>=0.19,<0.20",
  "openai>=1.42,<2.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.setuptools.package-dir]
"" = "apps/backend/src"

[tool.setuptools.packages.find]
where = ["apps/backend/src"]

[tool.pytest.ini_options]
pythonpath = [
  "apps/backend/src",
]
addopts = "-ra"
testpaths = [
  "apps/backend/tests",
]
